--- a/src/css/index.css
+++ b/src/css/index.css
@@ -351,7 +351,33 @@ ul {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  outline-color: #65c466;
+}
+
+.wrapper {
+  background: #eaf8bf;
+  min-height: 100vh;
+  color: #001d4a;
+}
+
+.content-wrapper {
+  max-width: 600px;
+  margin: 0 auto;
+}
+
+.task-item {
+  display: flex;
+  align-items: center;
+  margin: 5px 0;
+  background: #006992;
+  color: #eaf8bf;
+}
+.task-remove-btn {
+  margin-right: 5px;
+  padding: 3px;
+  background: #001d4a;
+  color: #eca400;
+  border-radius: 2px;
+  cursor: pointer;
 }
 
 /*# sourceMappingURL=index.css.map */
