--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,383 +1,1 @@
-/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
-/* Document
-   ========================================================================== */
-/**
- * 1. Correct the line height in all browsers.
- * 2. Prevent adjustments of font size after orientation changes in iOS.
- */
-html {
-  line-height: 1.15;
-  /* 1 */
-  -webkit-text-size-adjust: 100%;
-  /* 2 */
-}
-
-/* Sections
-       ========================================================================== */
-/**
-     * Remove the margin in all browsers.
-     */
-body {
-  margin: 0;
-}
-
-/**
-     * Render the `main` element consistently in IE.
-     */
-main {
-  display: block;
-}
-
-/**
-     * Correct the font size and margin on `h1` elements within `section` and
-     * `article` contexts in Chrome, Firefox, and Safari.
-     */
-h1 {
-  font-size: 2em;
-  margin: 0;
-}
-
-/* Grouping content
-       ========================================================================== */
-/**
-     * 1. Add the correct box sizing in Firefox.
-     * 2. Show the overflow in Edge and IE.
-     */
-hr {
-  box-sizing: content-box;
-  /* 1 */
-  height: 0;
-  /* 1 */
-  overflow: visible;
-  /* 2 */
-}
-
-/**
-     * 1. Correct the inheritance and scaling of font size in all browsers.
-     * 2. Correct the odd `em` font sizing in all browsers.
-     */
-pre {
-  font-family: monospace, monospace;
-  /* 1 */
-  font-size: 1em;
-  /* 2 */
-}
-
-/* Text-level semantics
-       ========================================================================== */
-/**
-     * Remove the gray background on active links in IE 10.
-     */
-a {
-  background-color: transparent;
-}
-
-/**
-     * 1. Remove the bottom border in Chrome 57-
-     * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
-     */
-abbr[title] {
-  border-bottom: none;
-  /* 1 */
-  text-decoration: underline;
-  /* 2 */
-  text-decoration: underline dotted;
-  /* 2 */
-}
-
-/**
-     * Add the correct font weight in Chrome, Edge, and Safari.
-     */
-b,
-strong {
-  font-weight: bolder;
-}
-
-/**
-     * 1. Correct the inheritance and scaling of font size in all browsers.
-     * 2. Correct the odd `em` font sizing in all browsers.
-     */
-code,
-kbd,
-samp {
-  font-family: monospace, monospace;
-  /* 1 */
-  font-size: 1em;
-  /* 2 */
-}
-
-/**
-     * Add the correct font size in all browsers.
-     */
-small {
-  font-size: 80%;
-}
-
-/**
-     * Prevent `sub` and `sup` elements from affecting the line height in
-     * all browsers.
-     */
-sub,
-sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline;
-}
-
-sub {
-  bottom: -0.25em;
-}
-
-sup {
-  top: -0.5em;
-}
-
-/* Embedded content
-       ========================================================================== */
-/**
-     * Remove the border on images inside links in IE 10.
-     */
-img {
-  border-style: none;
-}
-
-/* Forms
-       ========================================================================== */
-/**
-     * 1. Change the font styles in all browsers.
-     * 2. Remove the margin in Firefox and Safari.
-     */
-button,
-input,
-optgroup,
-select,
-textarea {
-  font-family: inherit;
-  /* 1 */
-  font-size: 100%;
-  /* 1 */
-  line-height: 1.15;
-  /* 1 */
-  margin: 0;
-  /* 2 */
-}
-
-/**
-     * Show the overflow in IE.
-     * 1. Show the overflow in Edge.
-     */
-button,
-input {
-  /* 1 */
-  overflow: visible;
-}
-
-/**
-     * Remove the inheritance of text transform in Edge, Firefox, and IE.
-     * 1. Remove the inheritance of text transform in Firefox.
-     */
-button,
-select {
-  /* 1 */
-  text-transform: none;
-}
-
-/**
-     * Correct the inability to style clickable types in iOS and Safari.
-     */
-button,
-[type=button],
-[type=reset],
-[type=submit] {
-  -webkit-appearance: button;
-}
-
-/**
-     * Remove the inner border and padding in Firefox.
-     */
-button::-moz-focus-inner,
-[type=button]::-moz-focus-inner,
-[type=reset]::-moz-focus-inner,
-[type=submit]::-moz-focus-inner {
-  border-style: none;
-  padding: 0;
-}
-
-/**
-     * Restore the focus styles unset by the previous rule.
-     */
-button:-moz-focusring,
-[type=button]:-moz-focusring,
-[type=reset]:-moz-focusring,
-[type=submit]:-moz-focusring {
-  outline: 1px dotted ButtonText;
-}
-
-/**
-     * Correct the padding in Firefox.
-     */
-fieldset {
-  padding: 0.35em 0.75em 0.625em;
-}
-
-/**
-     * 1. Correct the text wrapping in Edge and IE.
-     * 2. Correct the color inheritance from `fieldset` elements in IE.
-     * 3. Remove the padding so developers are not caught out when they zero out
-     *    `fieldset` elements in all browsers.
-     */
-legend {
-  box-sizing: border-box;
-  /* 1 */
-  color: inherit;
-  /* 2 */
-  display: table;
-  /* 1 */
-  max-width: 100%;
-  /* 1 */
-  padding: 0;
-  /* 3 */
-  white-space: normal;
-  /* 1 */
-}
-
-/**
-     * Add the correct vertical alignment in Chrome, Firefox, and Opera.
-     */
-progress {
-  vertical-align: baseline;
-}
-
-/**
-     * Remove the default vertical scrollbar in IE 10+.
-     */
-textarea {
-  overflow: auto;
-}
-
-/**
-     * 1. Add the correct box sizing in IE 10.
-     * 2. Remove the padding in IE 10.
-     */
-[type=checkbox],
-[type=radio] {
-  box-sizing: border-box;
-  /* 1 */
-  padding: 0;
-  /* 2 */
-}
-
-/**
-     * Correct the cursor style of increment and decrement buttons in Chrome.
-     */
-[type=number]::-webkit-inner-spin-button,
-[type=number]::-webkit-outer-spin-button {
-  height: auto;
-}
-
-/**
-     * 1. Correct the odd appearance in Chrome and Safari.
-     * 2. Correct the outline style in Safari.
-     */
-[type=search] {
-  -webkit-appearance: textfield;
-  /* 1 */
-  outline-offset: -2px;
-  /* 2 */
-}
-
-/**
-     * Remove the inner padding in Chrome and Safari on macOS.
-     */
-[type=search]::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
-
-/**
-     * 1. Correct the inability to style clickable types in iOS and Safari.
-     * 2. Change font properties to `inherit` in Safari.
-     */
-::-webkit-file-upload-button {
-  -webkit-appearance: button;
-  /* 1 */
-  font: inherit;
-  /* 2 */
-}
-
-/* Interactive
-       ========================================================================== */
-/*
-     * Add the correct display in Edge, IE 10+, and Firefox.
-     */
-details {
-  display: block;
-}
-
-/*
-     * Add the correct display in all browsers.
-     */
-summary {
-  display: list-item;
-}
-
-/* Misc
-       ========================================================================== */
-/**
-     * Add the correct display in IE 10+.
-     */
-template {
-  display: none;
-}
-
-/**
-     * Add the correct display in IE 10.
-     */
-[hidden] {
-  display: none;
-}
-
-/**
-     *Delete dots before unordered lists
-     */
-ul {
-  list-style-type: none;
-}
-
-/**
-     *remove all padding and margins + make all elemets border-box
-     */
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
-
-.wrapper {
-  background: #eaf8bf;
-  min-height: 100vh;
-  color: #001d4a;
-}
-
-.content-wrapper {
-  max-width: 600px;
-  margin: 0 auto;
-}
-
-.task-item {
-  display: flex;
-  align-items: center;
-  margin: 5px 0;
-  background: #006992;
-  color: #eaf8bf;
-}
-.task-remove-btn {
-  margin-right: 5px;
-  padding: 3px;
-  background: #001d4a;
-  color: #eca400;
-  border-radius: 2px;
-  cursor: pointer;
-}
-
-/*# sourceMappingURL=index.css.map */
+@import"https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap";/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}main{display:block}h1{font-size:2em;margin:0}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-0.25em}sup{top:-0.5em}img{border-style:none}button,input,optgroup,select,textarea{font-family:inherit;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}button,[type=button],[type=reset],[type=submit]{-webkit-appearance:button}button::-moz-focus-inner,[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner{border-style:none;padding:0}button:-moz-focusring,[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details{display:block}summary{display:list-item}template{display:none}[hidden]{display:none}ul{list-style-type:none}*{padding:0;margin:0;box-sizing:border-box}.wrapper{background:#242582;min-height:100vh;color:#fff;overflow:auto}.content-wrapper{max-width:600px;margin:0 auto}html{font-family:"Open Sans",sans-serif;font-weight:400;outline:none}.header-title{font-weight:700;font-size:2.5em;margin:10px 0 5px}.header-date{font-size:1em;opacity:.6}.task-content{word-break:break-all}.task-item{display:flex;align-items:center;margin:5px 0;color:#242582}.task-remove-btn{margin-right:7px;border-radius:10px;border:1px solid #fff;width:18px;height:18px;cursor:pointer;position:relative}.task-remove-btn:hover::before{content:url("../images/small-check.png");opacity:.7;position:absolute;top:2px;left:1px}.task-btns{display:none;opacity:0;margin-bottom:10px;transition:all .2s ease}.task-add-input{width:100%;height:40px;background:transparent;border:1px solid #fff;color:#fff;padding:10px 0 0 10px;border-radius:2px;margin:25px 0 10px;outline:none;resize:none;transition:all .2s ease}.task-add-input::placeholder{color:#fff;opacity:.6}.task-add-btn{padding:5px 10px;color:#fff;background-color:#f64c72;border:0;border-radius:2px;cursor:pointer}.task-undo-btn{color:#f64c72;background:#fff;padding:5px 10px;border:0;border-radius:2px;cursor:pointer}.task-line{border:.5px solid #fff}.task-item{display:block;padding:10px 15px 10px 33px;background:linear-gradient(89.55deg, rgba(247, 74, 115, 0.87) 0%, rgba(214, 58, 95, 0.87) 100%);box-shadow:5px 5px 6px rgba(0,0,0,.32);border-radius:5px;color:#fff;margin:10px 0;transition:all .2s ease;position:relative}.task-remove-btn{position:absolute;top:10px;left:8px}.active{display:block;opacity:1}/*# sourceMappingURL=index.css.map */
