--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,36 +1,130 @@
 @use "reset";
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap");
 
 //colors
-$orange: #eca400;
-$slime: #eaf8bf;
-$blue: #006992;
-$indigo: #27476e;
-$Oblue: #001d4a;
+$dark-blue: #242582;
+$light-blue: #2f2fa2;
+$red: #f64c72;
+$font-color: #fff;
 .wrapper {
-  background: $slime;
+  background: $dark-blue;
   min-height: 100vh;
-  color: $Oblue;
+  color: $font-color;
+  overflow: auto;
 }
 .content-wrapper {
   max-width: 600px;
   margin: 0 auto;
 }
+html {
+  font-family: "Open Sans", sans-serif;
+  font-weight: 400;
+  outline: none;
+}
 //header
+.header {
+  &-title {
+    font-weight: 700;
+    font-size: 2.5em;
+    margin: 10px 0 5px;
+  }
+  &-date {
+    font-size: 1em;
+    opacity: 0.6;
+  }
+}
 //main
+
 .task {
+  &-content {
+    word-break: break-all;
+  }
   &-item {
     display: flex;
     align-items: center;
     margin: 5px 0;
-    background: $blue;
-    color: $slime;
+    color: $dark-blue;
   }
   &-remove-btn {
-    margin-right: 5px;
-    padding: 3px;
-    background: $Oblue;
-    color: $orange;
+    margin-right: 7px;
+    border-radius: 10px;
+    border: 1px solid $font-color;
+    width: 18px;
+    height: 18px;
+    cursor: pointer;
+    position: relative;
+    &:hover::before {
+      content: url("../images/small-check.png");
+      opacity: 0.7;
+      position: absolute;
+      top: 2px;
+      left: 1px;
+    }
+  }
+  &-btns {
+    display: none;
+    opacity: 0;
+    margin-bottom: 10px;
+    transition: all 0.2s ease;
+  }
+  &-add-input {
+    width: 100%;
+    height: 40px;
+    background: transparent;
+    border: 1px solid $font-color;
+    color: $font-color;
+    padding: 10px 0 0 10px;
+    border-radius: 2px;
+    margin: 25px 0 10px;
+    outline: none;
+    resize: none;
+    transition: all 0.2s ease;
+    &::placeholder {
+      color: $font-color;
+      opacity: 0.6;
+    }
+  }
+  &-add-btn {
+    padding: 5px 10px;
+    color: $font-color;
+    background-color: $red;
+    border: 0;
     border-radius: 2px;
     cursor: pointer;
   }
+  &-undo-btn {
+    color: $red;
+    background: $font-color;
+    padding: 5px 10px;
+    border: 0;
+    border-radius: 2px;
+    cursor: pointer;
+  }
+  &-line {
+    border: 0.5px solid $font-color;
+  }
+  &-item {
+    display: block;
+    padding: 10px 15px 10px 33px;
+    background: linear-gradient(
+      89.55deg,
+      rgba(247, 74, 115, 0.87) 0%,
+      rgba(214, 58, 95, 0.87) 100%
+    );
+    box-shadow: 5px 5px 6px rgba(0, 0, 0, 0.32);
+    border-radius: 5px;
+    color: $font-color;
+    margin: 10px 0;
+    transition: all 0.2s ease;
+    position: relative;
+  }
+  &-remove-btn {
+    position: absolute;
+    top: 10px;
+    left: 8px;
+  }
+}
+.active {
+  display: block;
+  opacity: 1;
 }
