--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -7,7 +7,7 @@ $light-blue: #2f2fa2;
 $red: #f64c72;
 $font-color: #fff;
 .wrapper {
-  background: $dark-blue;
+  background: linear-gradient(252.07deg, #242482 9.25%, #2f2fa1 89.19%);
   min-height: 100vh;
   color: $font-color;
   overflow: auto;
